パッケージ名の変更／モジュール構成の変更

--- a/src/main/resources/META-INF/i18n/messages_en.properties
+++ b/src/main/resources/META-INF/i18n/messages_en.properties
@@ -29,6 +29,6 @@ common.copyright=c 2017 plat4u.com
 
 
 # message.
-com.plat4u.person.account.biz.controller.AccountController.login=Bad Request. ({0})
-com.plat4u.person.account.biz.service.AccountService.authenticate.fail=Authentication failed.
-com.plat4u.person.account.biz.service.AccountService.get.notfound=Data not found.
+com.plat4u.ghost.account.biz.controller.AccountController.login=Bad Request. ({0})
+com.plat4u.ghost.account.biz.service.AccountService.authenticate.fail=Authentication failed.
+com.plat4u.ghost.account.biz.service.AccountService.get.notfound=Data not found.
