--- a/src/test/resources/META-INF/i18n/messages_ja.properties
+++ b/src/test/resources/META-INF/i18n/messages_ja.properties
@@ -28,6 +28,6 @@ common.pj.name=person composition
 common.copyright=c 2017 plat4u.com
 
 # message.
-com.plat4u.person.account.biz.controller.AccountController.login=Bad Request. ({0})
-com.plat4u.person.account.biz.service.AccountService.authenticate.fail=Authentication failed.
-com.plat4u.person.account.biz.service.AccountService.get.notfound=Data not found.
+com.plat4u.ghost.account.biz.controller.AccountController.login=Bad Request. ({0})
+com.plat4u.ghost.account.biz.service.AccountService.authenticate.fail=Authentication failed.
+com.plat4u.ghost.account.biz.service.AccountService.get.notfound=Data not found.
